--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ frontend/node_modules/
 frontend/.env.local
 frontend/.env.*.local
 
+.env.prod.bak
+backend/.env.test
+backend/celerybeat-schedule
