Fix: consolidate Dockerfile build stages to solve missing binaries

--- a/apps/lk/Dockerfile
+++ b/apps/lk/Dockerfile
@@ -4,30 +4,25 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable
 
-FROM base AS deps
+FROM base AS builder
 WORKDIR /app
-# Copy root workspace files
+# Copy workspace configs
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-# Copy shared packages
+# Copy shared packages structure (for install)
 COPY packages ./packages
-# Copy app package
+# Copy app package structure (for install)
 COPY apps/lk/package.json ./apps/lk/package.json
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=deps /app/packages ./packages
+# Copy full source
 COPY . .
 
-# Build specific app
+# Build
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 ENV NODE_ENV=production
 
-# Re-install strictly for build context if needed or just build
-# pnpm run build --filter lk
 WORKDIR /app/apps/lk
 RUN pnpm run build
 
@@ -41,6 +36,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 # Copy standalone build
+# Standalone output includes necessary node_modules and files in a structure mirroring the project
 COPY --from=builder --chown=nextjs:nodejs /app/apps/lk/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/apps/lk/.next/static ./apps/lk/.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/apps/lk/public ./apps/lk/public
