--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -9,12 +9,18 @@
   },
   "devDependencies": {
     "eslint": "^9",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "typescript": "^5"
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "zustand": "^5.0.9",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^5.0.9"
+  },
+  "peerDependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
