--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
