--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,9 +53,9 @@ easyocr==1.7.1
 opencv-python-headless==4.9.0.80
 Pillow==10.2.0
 
-# PDF Generation (disabled - requires system libs)
-# reportlab==4.0.9
-# weasyprint==60.2
+# PDF Generation
+reportlab==4.0.9
+weasyprint==60.2
 
 # Testing
 pytest==7.4.4
