Fix WeasyPrint 500: Add missing fonts to Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,9 @@ RUN apt-get update && apt-get install -y \
     libgdk-pixbuf-2.0-0 \
     libffi-dev \
     shared-mime-info \
+    fonts-liberation \
+    fonts-dejavu \
+    fontconfig \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
