--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
             git pull origin main
 
             echo "==> Rebuilding containers..."
-            docker compose -f docker-compose.prod.yml build --no-cache backend
+            docker compose -f docker-compose.prod.yml build --no-cache backend frontend
 
             echo "==> Restarting services..."
             docker compose -f docker-compose.prod.yml up -d
